Waypoint Manager 2.5.2
- Remove waypoints from the waypoint list when they no longer active (thanks severedsolo).

Waypoint Manager 2.5.1
- KSP 1.1.1 update (for CKAN).

Waypoint Manager 2.5.0
- Recompile for KSP 1.1

Waypoint Manager 2.4.5
- Add option to show waypoint location in decimal.
- Fixed issue with contract info getting duplicated (thanks smjjames).
- Fixed waypoint sort order.

Waypoint Manager 2.4.4
- Show waypoint location in degrees/minutes/seconds in main window.
- Add vessel marker to forbidden icons.

Waypoint Manager 2.4.3
- Recompile for KSP 1.0.5

Waypoint Manager 2.4.2
- Fixed issues with apply button in add mode (thanks Bizz Keryear).
- Fixed issue with waypoint icon scaling when large icons used (thanks amorymeltzer).

Waypoint Manager 2.4.1
- Correctly display name for "clustered" waypoints (Alpha, Beta, Gamma).
- Fix for duplicated waypoints (thanks Dr. Jet).
- Added Apply button to custom waypoint dialog (thanks 5thHorseman).

Waypoint Manager 2.4.0
- Added glide slope angle to assist with landing planes.
- Added option to change waypoint opacity.
- Made waypoints fade when they get occluded instead of just instantly becoming invisible.
- Corrected order of latitude/longitude boxes in custom waypoint editor.
- Allow custom waypoints to be placed in the map view on bodies other than the one the active vessel is on.

Waypoint Manager 2.3.4
- Stop fighting with CKAN and just realease update to support KSP 1.0.4

Waypoint Manager 2.3.3
- Hide waypoints when they are disabled.
- Update version file to support KSP 1.0.3

Waypoint Manager 2.3.2
- Re-release due to screwed up version file in last release.

Waypoint Manager 2.3.1
- KSP 1.0.2 compatibility.
- Fix problem with incorrect waypoint distances for mid-air/orbital waypoints.

Waypoint Manager 2.3.0
- KSP 1.0 compatibility.
- Support DDS textures for waypoint icons.

Waypoint Manager 2.2.1
- Fix for NRE error in tracking station.