@@ -1,5 +1,6 @@
 Waypoint Manager 2.5.2
 - Remove waypoints from the waypoint list when they no longer active (thanks severedsolo).
+- Move config file to PluginData to prevent unneccessesary Module Manager cache rebuilds (thanks galenmacil).
 
 Waypoint Manager 2.5.1
 - KSP 1.1.1 update (for CKAN).
